@@ -702,6 +702,21 @@ INSERT INTO `hp` (`level`, `novice`, `swordman`, `magician`, `archer`, `acolyte`
 
 -- --------------------------------------------------------
 
+--
+-- Table Structure for table `hotkey`
+--
+
+CREATE TABLE `hotkey` (
+`char_id` int(11) NOT NULL,
+`hotkey` tinyint(2) NOT NULL,
+`type` tinyint(1) NOT NULL,
+`id` int(11) NOT NULL,
+`skill_lv` tinyint(2) NOT NULL,
+PRIMARY KEY (`char_id`,`hotkey`)
+) ENGINE=MyISAM;
+
+-- ------------------------------------------------------------
+
 -- 
 -- Table structure for table `inventory`
 -- 
