@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+-Rev 37-
+[2008/09/21] Spre - Added hotkey Table to mysql database.
+-
+
 -Rev 36-
 [2008/09/21] Spre - Removed The .baks i left.
 -
